@@ -5,3 +5,4 @@ __pycache__
 build
 dist
 *.egg-info
+*.orig
