@@ -60,6 +60,7 @@
     * Added endpoint for start print
     * LCD message modification (GO: <IP>)
     * Fix connection errors causing the printer to report being in ERROR state
+    * Add the possibility to log at debug level around interesting events
 
 0.2.0 (2020-12-14)
 
